--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p class="we">We.</p>
             <span class="sec3_brace2">}</span>
           </div>
-          <div class="perfective">perfective</div>
+          <div class="perfective">Perfective</div>
         </div>
       </div>
     </section>
@@ -87,14 +87,18 @@
       <div class="sec4_container container">
         <div class="sec4_content">
           <div class="about">About</div>
-          <div class="sec4_gap">
-            <span class="sec4_brace1">{</span>
-            <p class="left"> 디자인에 진심인 사람들만 모였습니다.</p>
-            <p class="right">세상에 능력자는 많지만, 내 과업인 것처럼 생각하는 디자이너는 없을까.
-              점토에서 도기가 되듯, 똑 맞아 떨어지는 디자인을 보여드릴게요.</p>
-            <span class="sec4_brace2">}</span>
+          <div class="sec4_gap" id="sec4_text">
+            <div class="sec4_text1">
+              <span class="sec4_brace1">{</span>
+              <p class="left" id="sec4_text1"> 디자인에 진심인 사람들만 모였습니다.</p>
+             </div>
+             <div class="sec4_text2">
+              <p class="right" id="sec4_text2">세상에 능력자는 많지만, 내 과업인 것처럼 생각하는 디자이너는 없을까.
+                점토에서 도기가 되듯, 똑 맞아 떨어지는 디자인을 보여드릴게요.</p>
+              <span class="sec4_brace2">}</span>
+            </div>
           </div>
-          <div class="perfective">perfective</div>
+          <div class="perfective">Perfective</div>
         </div>
       </div>
     </section>
@@ -106,11 +110,11 @@
           <div class="sec5_img2" id="sec5_img2"><img src="./img/img_4.png" alt=""></div>
         </div>
         <div class="sec5_gap">
-          <div class="text1">
+          <div class="text1" id="sec5_text1">
             <h3>Our</h3>
             <h4>none- astray</h4>
           </div>
-          <div class="text2">
+          <div class="text2" id="sec5_text2">
             <h5>근간에 엇나가지 않는 본질에 집중합니다.</h5>
             <h6>모든 기획력과 디자인에는 이유가 따라붙어야하기 때문에 <br>
               이유없는 디자인에 매달리지 않습니다. <br>
@@ -169,8 +173,8 @@
               당신의 흥미를 끌어낼 수 있는 여기 브랜디즘 스튜디오에.</h3>
             <span class="sec8_brace2">}</span>
           </div>
-          <div class="contact">Contact</div>
-          <div class="object" id="object">
+          <div class="contact" id="sec8_contact">Contact</div>
+          <div class="object" id="sec8_object">
             <img class="twinkle" id="twinkle" src="./img/img_12.png" alt="">
             <img class="arrow" id="arrow" src="./img/img_13.png" alt="">
           </div>
