--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="slide_text1" id="slide1">
             <h2 class="we">We</h2> 
             <img class="sec1_img1" id="sec1_img1" src="./img/누끼3.png" alt="">
-            <h2 class="are">are</h2>
+            <h3 class="are">are</h3>
           </div>
           <div class="slide_text2" id="slide2">
             <h2 class="Br">Brandism</h2>
@@ -144,27 +144,22 @@
         <div class="sec7_content">
           <div class="proposal" id="sec7_proposal">pro;posal</div>
           <div class="sec7_gap">
-            <span class="sec7_brace1" id="sec7_brace1">{</span>
+            <span class="sec7_brace1 sec7_brace" id="sec7_brace1">{</span>
             <h3 class="sec7_text" id="sec7_text">정말 제대로 된 제안, 당기지 않으세요? <br>
               당신의 흥미를 끌어낼 수 있는 여기 브랜디즘 스튜디오에.</h3>
-            <span class="sec7_brace2" id="sec7_brace2">}</span>
+            <span class="sec7_brace2 sec7_brace" id="sec7_brace2">}</span>
           </div>
           <div class="contact" id="sec7_contact">Contact</div>
+          <div class="object" id="sec7_object">
+            <img class="twinkle" id="twinkle" src="./img/img_12.png" alt="">
+            <img class="arrow" id="arrow" src="./img/img_13.png" alt="">
+          </div>
         </div>
       </div>
     </section>
 
-    <section id="section8" class="section section8">
+    <!-- <section id="section8" class="section section8">
       <div class="sec8_container container">
-        <!-- <div class="logo" >
-          <a href="#" class="logo-btn"><img id="header-logo" src="./img/logo_w.png" alt=""></a>
-        </div>
-        <ul class="menu" id="header-menu">
-          <li>About</li>
-          <li>Portfolio</li>
-          <li>Our</li>
-          <li>Contact</li>
-        </ul> -->
         <div class="sec8_content">
           <div class="proposal">pro;posal</div>
           <div class="sec8_gap">
@@ -182,9 +177,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section id="section9" class="section section9">
+    <section id="section8" class="section section8">
       <div class="sec9_container container">
         <div class="sec9_content" >
           <h3>당신과</h3>
@@ -193,7 +188,7 @@
       </div>
     </section>
 
-    <section id="section10" class="section section10"> 
+    <section id="section9" class="section section9"> 
       <div class="sec10_container container">
         <div class="sec10_content">
           <h3>우리를</h3>
@@ -202,7 +197,7 @@
       </div>
     </section>
 
-    <section id="section11" class="section section11">
+    <section id="section10" class="section section10">
       <div class="sec11_container container">
         <div class="sec11_content">
           <h3>결합하는</h3>
@@ -212,16 +207,17 @@
       </div>
     </section>
 
-    <section id="section12" class="section section12">
+    <section id="section11" class="section section11">
       <div class="sec12_container container">
         <div class="sec12_gap1">
           <img id="sec12_img1" src= "./img/img_9.png" alt="">
         </div>
         <div class="sec12_content">
-          <h3>창출가치를 잇는 <br>
-            브랜디즘 입니다.  
-          </h3>
-          <span id="sec12_decoLine"></span>
+          <p>창출가치를 잇는 <br>
+            브랜디즘 입니다.
+            <!-- <span id="sec12_brush" class="brush"><img src="./img/brush.png" alt="">브랜디즘</span> 입니다.   -->
+          </p>
+          <span id="sec12_brush" class="brush"><img id="brush" src="./img/brush.png" alt=""></span>
         </div>
         <div class="sec12_gap2">
           <img id="sec12_img2" src="./img/img_10.png" alt="">
@@ -229,7 +225,7 @@
       </div>
     </section>
 
-    <section id="section13" class="section section13">
+    <section id="section12" class="section section12">
       <div class="sec13_container container">
         <div class="backgrond_img"><img src="./img/img_gradation_ft.png" alt=""></div>
         <div class="logo" id="logo">
@@ -276,18 +272,24 @@
       </div>
     </section>
   </footer>
+
+  <!-- Top 버튼 -->
+  <a href="#section1" title="처음으로" class="top-button" id="topBtn"><img src="./img/top_button.png" alt=""></a>
+
+</div>  
   
 
   <!-- jQuery & Bootstrap -->
-  <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-1.11.3.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+  </script> -->
 
 <script src="./js/index.js"></script>
+<!-- <script src="./js/topBtn.js"></script> -->
 
 </body>
 </html>
