--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         <div class="sec4_content">
           <div class="about">About</div>
           <div class="sec4_gap" id="sec4_text">
-            <div class="sec4_text1">
+            <div class="sec4_text1" id="sec4_text1">
               <span class="sec4_brace1">{</span>
               <p class="left"> 디자인에 진심인 사람들만 모였습니다.</p>
              </div>
-             <div class="sec4_text2">
+             <div class="sec4_text2" id="sec4_text2">
               <p class="right">세상에 능력자는 많지만, 내 과업인 것처럼 생각하는 디자이너는 없을까.
                 점토에서 도기가 되듯, 똑 맞아 떨어지는 디자인을 보여드릴게요.</p>
               <span class="sec4_brace2">}</span>
@@ -158,75 +158,56 @@
       </div>
     </section>
 
-    <!-- <section id="section8" class="section section8">
-      <div class="sec8_container container">
-        <div class="sec8_content">
-          <div class="proposal">pro;posal</div>
-          <div class="sec8_gap">
-            <span class="sec8_brace1" id="sec8_brace1">{</span>
-            <h3 class="sec8_text" id="sec8_text">
-              정말 제대로 된 제안, 당기지 않으세요? <br>
-              당신의 흥미를 끌어낼 수 있는 여기 브랜디즘 스튜디오에.
-            </h3>
-            <span class="sec8_brace2" id="sec8_brace2">}</span>
-          </div>
-          <div class="contact" id="sec8_contact">Contact</div>
-          <div class="object" id="sec8_object">
-            <img class="twinkle" id="twinkle" src="./img/img_12.png" alt="">
-            <img class="arrow" id="arrow" src="./img/img_13.png" alt="">
-          </div>
-        </div>
-      </div>
-    </section> -->
-
     <section id="section8" class="section section8">
-      <div class="sec9_container container">
-        <div class="sec9_content" >
+      <div class="sec8_container container">
+        <div class="sec8_content" >
           <h3>당신과</h3>
-          <img id="sec9_img" src="./img/img_7.png" alt="">
+          <img id="sec8_img" src="./img/img_7.png" alt="">
         </div>
       </div>
     </section>
 
     <section id="section9" class="section section9"> 
-      <div class="sec10_container container">
-        <div class="sec10_content">
+      <div class="sec9_container container">
+        <div class="sec9_content">
           <h3>우리를</h3>
-          <img id="sec10_img" src="./img/img_8.png" alt="">
+          <img id="sec9_img" src="./img/img_8.png" alt="">
         </div>
       </div>
     </section>
 
     <section id="section10" class="section section10">
-      <div class="sec11_container container">
-        <div class="sec11_content">
+      <div class="sec10_container container">
+        <div class="sec10_content">
           <h3>결합하는</h3>
-          <img class="image1" id="sec11_img1" src="./img/img_8-2.png" alt="">
-          <img class="image2" id="sec11_img2" src="./img/img_7-2.png" alt="">
+          <img class="image1" id="sec10_img1" src="./img/img_8-2.png" alt="">
+          <img class="image2" id="sec10_img2" src="./img/img_7-2.png" alt="">
         </div>
       </div>
     </section>
 
     <section id="section11" class="section section11">
-      <div class="sec12_container container">
-        <div class="sec12_gap1">
-          <img id="sec12_img1" src= "./img/img_9.png" alt="">
+      <div class="sec11_container container">
+        <div class="sec11_gap1">
+          <img id="sec11_img1" src= "./img/img_9.png" alt="">
         </div>
-        <div class="sec12_content">
-          <p>창출가치를 잇는 <br>
-            브랜디즘 입니다.
-            <!-- <span id="sec12_brush" class="brush"><img src="./img/brush.png" alt="">브랜디즘</span> 입니다.   -->
-          </p>
-          <span id="sec12_brush" class="brush"><img id="brush" src="./img/brush.png" alt=""></span>
+        <div class="sec11_content">
+          <h3 class="sec11_text1 sec11_text">창출가치를 잇는</h3>
+          <div class="sec11_wrap">
+            <span class="sec11_brace1 sec11_brace" id="sec11_brace1">{</span>
+            <h4 class="sec11_textBr " id="sec11_textBr">브랜디즘</h4>
+            <span class="sec11_brace2 sec11_brace" id="sec11_brace2">}</span>
+          </div>
+          <h5 class="sec11_text2 sec11_text" id="sec11_text2">입니다.</h5>
         </div>
-        <div class="sec12_gap2">
-          <img id="sec12_img2" src="./img/img_10.png" alt="">
+        <div class="sec11_gap2">
+          <img id="sec11_img2" src="./img/img_10.png" alt="">
         </div>
       </div>
     </section>
 
     <section id="section12" class="section section12">
-      <div class="sec13_container container">
+      <div class="sec12_container container">
         <div class="backgrond_img"><img src="./img/img_gradation_ft.png" alt=""></div>
         <div class="logo" id="logo">
           <a href="#" class="logo-btn"><img id="logo-img" src="./img/logo.png" alt=""></a>
@@ -238,7 +219,7 @@
           <li>6101</li>
           <li>3399</li> -->
         </div>
-        <div class="sec13_content" id="sec13_content">
+        <div class="sec12_content" id="sec12_content">
           <ul class="middle">
             <li class="about menu">About</li>
             <li class="Portfolio menu">Portfolio</li>
@@ -274,7 +255,7 @@
   </footer>
 
   <!-- Top 버튼 -->
-  <a href="#section1" title="처음으로" class="top-button" id="topBtn"><img src="./img/top_button.png" alt=""></a>
+  <a href="file:///C:/Users/%EC%84%B1%EC%8A%A4%EB%9F%B0/Desktop/%EC%84%B1%EC%8A%A4%EB%9F%B0_/0713_2_%EA%B9%83%ED%97%88%EB%B8%8C%EB%B0%B0%ED%8F%AC_Brandism_topBtn%EC%9D%B4%EB%B2%A4%ED%8A%B8/%EB%B8%8C%EB%9E%9C%EB%94%94%EC%A6%98/index.html" title="처음으로" class="top-button" id="topBtn"><img src="./img/top_button.png" alt="메인으로"></a>
 
 </div>  
   
