--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 <!--         <textarea style="margin-top: -20%;" id="wheelNumberPrint"></textarea> -->  <!-- 추후 완성시 삭제 필요 -->
       </div>
       <ul class="menu" id="header-menu">
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Our</li>
-        <li>Contact</li>
+        <a href="#"><li>About</li></a>
+        <a href="#"><li>Portfolio</li></a>
+        <a href="#"><li>Our</li></a>
+        <a href="#"><li>Contact</li></a>
       </ul>
     </div>
   </header>
@@ -255,7 +255,7 @@
   </footer>
 
   <!-- Top 버튼 -->
-  <a href="file:///C:/Users/%EC%84%B1%EC%8A%A4%EB%9F%B0/Desktop/%EC%84%B1%EC%8A%A4%EB%9F%B0_/0713_2_%EA%B9%83%ED%97%88%EB%B8%8C%EB%B0%B0%ED%8F%AC_Brandism_topBtn%EC%9D%B4%EB%B2%A4%ED%8A%B8/%EB%B8%8C%EB%9E%9C%EB%94%94%EC%A6%98/index.html" title="처음으로" class="top-button" id="topBtn"><img src="./img/top_button.png" alt="메인으로"></a>
+  <a href="" title="처음으로" class="top-button" id="topBtn"><img src="./img/top_button.png" alt="메인으로"></a>
 
 </div>  
   
