--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
   <!-- 웹접근성 -->
+
   <ul id="skip">
     <li><a href="header">메뉴바로가기</a></li>
     <li><a href="main">메인바로가기</a></li>
@@ -46,12 +47,12 @@
         <div class="sec1_content" id="sec1_scale">
           <div class="slide_text1" id="slide1">
             <h2 class="we">We</h2> 
-            <img class="sec1_img1" id="sec1_img1" src="./img/누끼3.png" alt="">
+            <img class="sec1_img1" id="sec1_img1" src="./img/img_1.png" alt="">
             <h3 class="are">are</h3>
           </div>
           <div class="slide_text2" id="slide2">
             <h2 class="Br">Brandism</h2>
-            <img class="sec1_img2" id="sec1_img2" src="./img/img_12.png" alt="">
+            <img class="sec1_img2" id="sec1_img2" src="./img/img2.png" alt="">
             <h3 class="st">studio</h3>
           </div>
         </div>
@@ -74,7 +75,7 @@
           <div class="sec3_gap">
             <span class="sec3_brace1">{</span>
             <p class="our"> Our.</p> <!-- 공백삽입 &nbsp; -->
-            <a href=""><img id="sec3_img" src="./img/img_2.png" alt=""></a>
+            <a href=""><img id="sec3_img" src="./img/img3.png" alt=""></a>
             <p class="we">We.</p>
             <span class="sec3_brace2">}</span>
           </div>
@@ -105,10 +106,11 @@
 
     <section id="section5" class="section section5">
       <div class="sec5_container container">
-        <div class="background_img"><img src="./img/img_gradation_1.png" alt=""></div>
+        <div class="background_img1"><img src="./img/blur_object1.png" alt=""></div>
+        <div class="background_img2"><img src="./img/blur_object2.png" alt=""></div>
         <div class="sec5_content">
-          <div class="sec5_img1" id="sec5_img1"><img src="./img/img_5.png" alt=""></div>
-          <div class="sec5_img2" id="sec5_img2"><img src="./img/img_4.png" alt=""></div>
+          <div class="sec5_img1" id="sec5_img1"><img src="./img/img4.png" alt=""></div>
+          <div class="sec5_img2" id="sec5_img2"><img src="./img/img_5.png" alt=""></div>
         </div>
         <div class="sec5_gap">
           <div class="text1" id="sec5_text1">
@@ -131,7 +133,7 @@
           <div class="contact">Contact</div>
           <div class="sec6_gap">
             <span class="sec6_brace1">{</span>
-            <img id="sec6_img" src="./img/img_2.png" alt="">
+            <img id="sec6_img" src="./img/img3.png" alt="">
             <span class="sec6_brace2">}</span>
           </div>
           <div class="proposal">pro;posal</div>
@@ -151,7 +153,7 @@
           </div>
           <div class="contact" id="sec7_contact">Contact</div>
           <div class="object" id="sec7_object">
-            <img class="twinkle" id="twinkle" src="./img/img_12.png" alt="">
+            <img class="twinkle" id="twinkle" src="./img/img_2.png" alt="">
             <img class="arrow" id="arrow" src="./img/img_13.png" alt="">
           </div>
         </div>
@@ -208,9 +210,9 @@
 
     <section id="section12" class="section section12">
       <div class="sec12_container container">
-        <div class="backgrond_img"><img src="./img/img_gradation_ft.png" alt=""></div>
+        <div class="backgrond_img"><img src="./img/blur_object3.png" alt=""></div>
         <div class="logo" id="logo">
-          <a href="#" class="logo-btn"><img id="logo-img" src="./img/logo.png" alt=""></a>
+          <a href="#" class="logo-btn"><img id="logo-img" src="./img/logo_w.png" alt=""></a>
           <!-- <textarea style="margin-top: -10%;" id="wheelNumberPrint3"></textarea>  -->
         </div>
         <div class="number" id="number">
