--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="./css/style.css">
-  <!-- <link rel="stylesheet" href="./css/response.css"> -->
+  <link rel="stylesheet" href="./css/response.css">
 </head>
 
 <body>
@@ -19,13 +19,13 @@
 
   <ul id="skip">
     <li><a href="header">메뉴바로가기</a></li>
-    <li><a href="main">메인바로가기</a></li>
+    <li><a href="section">메인바로가기</a></li>
     <li><a href="footer">하단바로가기</a></li>
   </ul>
 
 <div id="wrap">
 
-  <header id="header">
+  <header id="header" class="header">
     <div class="header-container">
       <div class="logo" >
         <a href="#" class="logo-btn"><img id="header-logo" class="desktop-img logoup" src="./img/logo_b.png" alt=""></a>
@@ -37,10 +37,17 @@
         <a href="#"><li>Our</li></a>
         <a href="#"><li>Contact</li></a>
       </ul>
+      <div class="mobile-menu-btn">
+        <a href="#" class="mobile-menu" id="mobile-menu">
+          <i></i>
+          <i></i>
+          <i></i>
+        </a>
+      </div>
     </div>
   </header>
 
-  <main id="main"> 
+  <!-- <main id="main">  -->
 
     <section id="section1" class="section section1">
       <div class="sec1_container container">
@@ -75,7 +82,7 @@
           <div class="sec3_gap">
             <span class="sec3_brace1">{</span>
             <p class="our"> Our.</p> <!-- 공백삽입 &nbsp; -->
-            <a href=""><img id="sec3_img" src="./img/img3.png" alt=""></a>
+            <a href=""><img id="sec3_img" src="./img/img_3.png" alt=""></a>
             <p class="we">We.</p>
             <span class="sec3_brace2">}</span>
           </div>
@@ -92,9 +99,9 @@
             <div class="sec4_text1" id="sec4_text1">
               <span class="sec4_brace1">{</span>
               <p class="left"> 디자인에 진심인 사람들만 모였습니다.</p>
-             </div>
-             <div class="sec4_text2" id="sec4_text2">
-              <p class="right">세상에 능력자는 많지만, 내 과업인 것처럼 생각하는 디자이너는 없을까.
+            </div>
+            <div class="sec4_text2" id="sec4_text2">
+              <p class="right">세상에 능력자는 많지만, 내 과업인 것처럼 생각하는 디자이너는 없을까.<br>
                 점토에서 도기가 되듯, 똑 맞아 떨어지는 디자인을 보여드릴게요.</p>
               <span class="sec4_brace2">}</span>
             </div>
@@ -133,7 +140,7 @@
           <div class="contact">Contact</div>
           <div class="sec6_gap">
             <span class="sec6_brace1">{</span>
-            <img id="sec6_img" src="./img/img3.png" alt="">
+            <img id="sec6_img" src="./img/img_3.png" alt="">
             <span class="sec6_brace2">}</span>
           </div>
           <div class="proposal">pro;posal</div>
@@ -149,12 +156,15 @@
             <span class="sec7_brace1 sec7_brace" id="sec7_brace1">{</span>
             <h3 class="sec7_text" id="sec7_text">정말 제대로 된 제안, 당기지 않으세요? <br>
               당신의 흥미를 끌어낼 수 있는 여기 브랜디즘 스튜디오에.</h3>
+            <h3 class="mo_sec7_text" id="mo_sec7_text">정말 제대로 된 제안, 당기지 않으세요? <br>
+              당신의 흥미를 끌어낼 수 있는<br> 여기 브랜디즘 스튜디오에.</h3>
             <span class="sec7_brace2 sec7_brace" id="sec7_brace2">}</span>
           </div>
           <div class="contact" id="sec7_contact">Contact</div>
           <div class="object" id="sec7_object">
-            <img class="twinkle" id="twinkle" src="./img/img_2.png" alt="">
-            <img class="arrow" id="arrow" src="./img/img_13.png" alt="">
+            <a href="#"><img class="twinkle" id="twinkle" src="./img/img2.png" alt=""></a>
+            <!-- <img class="arrow" id="arrow" src="./img/img_14.png" alt=""> -->
+            <a href="" class="arrow" id="arrow"></a>
           </div>
         </div>
       </div>
@@ -243,7 +253,7 @@
       </div>
     </section>
 
-  </main>
+  <!-- </main> -->
 
   <footer id="footer" class="footer">
     <section id="footer" class="section section13">
@@ -257,19 +267,23 @@
   </footer>
 
   <!-- Top 버튼 -->
-  <a href="" title="처음으로" class="top-button" id="topBtn"><img src="./img/top_button.png" alt="메인으로"></a>
-
+  <div class="top-btn">
+    <a href="" title="처음으로" class="top-button" id="topBtn">
+      <img class="pc-image" src="./img/top_button.png" alt="메인으로">
+      <img class="mo-image" src="./img/mo_top_btn.png" alt="메인으로">
+    </a>
+  </div>
 </div>  
   
 
   <!-- jQuery & Bootstrap -->
   <!-- <script src="https://code.jquery.com/jquery-1.11.3.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script> -->
+  </script>
 
 <script src="./js/index.js"></script>
 <!-- <script src="./js/topBtn.js"></script> -->
