--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
       <div class="sec1_container container">
         <div class="sec1_content" id="sec1_scale">
           <div class="slide_text1" id="slide1">
-            <h2 class="we">We</h2> 
-            <img class="sec1_img1" id="sec1_img1" src="./img/img_1.png" alt="">
+            <h2 class="we">We</h2>
+            <a href="#" class="sec1_img1" id="sec1_img1">
+              <img src="./img/object1.png" alt="">
+            </a> 
             <h3 class="are">are</h3>
           </div>
           <div class="slide_text2" id="slide2">
             <h2 class="Br">Brandism</h2>
-            <img class="sec1_img2" id="sec1_img2" src="./img/img2.png" alt="">
+            <img class="sec1_img2" id="sec1_img2" src="./img/object2.png" alt="">
             <h3 class="st">studio</h3>
           </div>
         </div>
@@ -82,7 +84,7 @@
           <div class="sec3_gap">
             <span class="sec3_brace1">{</span>
             <p class="our"> Our.</p> <!-- 공백삽입 &nbsp; -->
-            <a href=""><img id="sec3_img" src="./img/img_3.png" alt=""></a>
+            <a href="#"><img id="sec3_img" src="./img/object3.png" alt=""></a>
             <p class="we">We.</p>
             <span class="sec3_brace2">}</span>
           </div>
@@ -116,8 +118,9 @@
         <div class="background_img1"><img src="./img/blur_object1.png" alt=""></div>
         <div class="background_img2"><img src="./img/blur_object2.png" alt=""></div>
         <div class="sec5_content">
-          <div class="sec5_img1" id="sec5_img1"><img src="./img/img4.png" alt=""></div>
-          <div class="sec5_img2" id="sec5_img2"><img src="./img/img_5.png" alt=""></div>
+          <div class="sec5_img1" id="sec5_img1"><img src="./img/object4.png" alt=""></div>
+          <div class="sec5_img2" id="sec5_img2"><img src="./img/object5.png" alt=""></div>
+          <div class="sec5_img3" id="sec5_img3"><img src="./img/object6.png" alt=""></div>
         </div>
         <div class="sec5_gap">
           <div class="text1" id="sec5_text1">
@@ -140,7 +143,7 @@
           <div class="contact">Contact</div>
           <div class="sec6_gap">
             <span class="sec6_brace1">{</span>
-            <img id="sec6_img" src="./img/img_3.png" alt="">
+            <img id="sec6_img" src="./img/object3.png" alt="">
             <span class="sec6_brace2">}</span>
           </div>
           <div class="proposal">pro;posal</div>
@@ -162,9 +165,11 @@
           </div>
           <div class="contact" id="sec7_contact">Contact</div>
           <div class="object" id="sec7_object">
-            <a href="#"><img class="twinkle" id="twinkle" src="./img/img2.png" alt=""></a>
-            <!-- <img class="arrow" id="arrow" src="./img/img_14.png" alt=""> -->
-            <a href="" class="arrow" id="arrow"></a>
+            <a href="#">
+              <img class="twinkle" id="twinkle" src="./img/object3_yellow-back.png" alt="">
+              <img class="arrow" id="arrow" src="./img/arrow_b.png" alt="">
+            </a>
+
           </div>
         </div>
       </div>
@@ -200,9 +205,9 @@
 
     <section id="section11" class="section section11">
       <div class="sec11_container container">
-        <div class="sec11_gap1">
+        <!-- <div class="sec11_gap1">
           <img id="sec11_img1" src= "./img/img_9.png" alt="">
-        </div>
+        </div> -->
         <div class="sec11_content">
           <h3 class="sec11_text1 sec11_text">창출가치를 잇는</h3>
           <div class="sec11_wrap">
@@ -212,9 +217,9 @@
           </div>
           <h5 class="sec11_text2 sec11_text" id="sec11_text2">입니다.</h5>
         </div>
-        <div class="sec11_gap2">
+        <!-- <div class="sec11_gap2">
           <img id="sec11_img2" src="./img/img_10.png" alt="">
-        </div>
+        </div> -->
       </div>
     </section>
 
