--- a/index.html
+++ b/index.html
@@ -179,7 +179,11 @@
       <div class="sec8_container container">
         <div class="sec8_content" >
           <h3>당신과</h3>
-          <img id="sec8_img" src="./img/img_7.png" alt="">
+          <div class="sec8_img_content">
+            <div class="sec8_img1" id="sec8_img1"><img src="./img/objdct7_1.png" alt=""></div>
+            <div class="sec8_img2" id="sec8_img2"><img src="./img/objdct7_2.png" alt=""></div>
+            <div class="sec8_img3" id="sec8_img3"><img src="./img/objdct7_3.png" alt=""></div>
+          </div>
         </div>
       </div>
     </section>
