--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header id="header" class="header">
     <div class="header-container">
       <div class="logo" >
-        <a href="#" class="logo-btn"><img id="header-logo" class="desktop-img logoup" src="./img/logo_b.png" alt=""></a>
+        <a href="#" class="logo-btn"><img id="header-logo" class="desktop-img logoup" src="./img/homebutton_logo.png" alt=""></a>
 <!--         <textarea style="margin-top: -20%;" id="wheelNumberPrint"></textarea> -->  <!-- 추후 완성시 삭제 필요 -->
       </div>
       <ul class="menu" id="header-menu">
@@ -192,7 +192,11 @@
       <div class="sec9_container container">
         <div class="sec9_content">
           <h3>우리를</h3>
-          <img id="sec9_img" src="./img/img_8.png" alt="">
+          <div class="sec9_img_content">
+            <img id="sec9_img2" src="./img/objdct8_2.png" alt="">
+            <img id="sec9_img1" src="./img/objdct8_1.png" alt="">
+            <img id="sec9_img3" src="./img/objdct8_3.png" alt="">
+          </div>
         </div>
       </div>
     </section>
@@ -201,8 +205,12 @@
       <div class="sec10_container container">
         <div class="sec10_content">
           <h3>결합하는</h3>
-          <img class="image1" id="sec10_img1" src="./img/img_8-2.png" alt="">
-          <img class="image2" id="sec10_img2" src="./img/img_7-2.png" alt="">
+          <div class="sec10_img_content">
+            <img id="sec10_img2" src="./img/objdct9_2.png" alt="">
+            <img id="sec10_img1" src="./img/objdct9_1.png" alt="">
+            <img id="sec10_img3" src="./img/objdct9_3.png" alt="">
+            <img id="sec10_img4" src="./img/objdct9_4.png" alt="">
+          </div>
         </div>
       </div>
     </section>
@@ -216,7 +224,7 @@
           <h3 class="sec11_text1 sec11_text">창출가치를 잇는</h3>
           <div class="sec11_wrap">
             <span class="sec11_brace1 sec11_brace" id="sec11_brace1">{</span>
-            <h4 class="sec11_textBr " id="sec11_textBr">브랜디즘</h4>
+            <h4 class="sec11_textBr sec11_text" id="sec11_textBr">브랜디즘</h4>
             <span class="sec11_brace2 sec11_brace" id="sec11_brace2">}</span>
           </div>
           <h5 class="sec11_text2 sec11_text" id="sec11_text2">입니다.</h5>
@@ -231,7 +239,7 @@
       <div class="sec12_container container">
         <div class="backgrond_img"><img src="./img/blur_object3.png" alt=""></div>
         <div class="logo" id="logo">
-          <a href="#" class="logo-btn"><img id="logo-img" src="./img/logo_w.png" alt=""></a>
+          <a href="#" class="logo-btn"><img id="logo-img" src="./img/footer_logo.png" alt=""></a>
           <!-- <textarea style="margin-top: -10%;" id="wheelNumberPrint3"></textarea>  -->
         </div>
         <div class="number" id="number">
