--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- css 연동 -->
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/fonts.css">
-  <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/mo-main.css"> 
+  <link rel="stylesheet" href="./css/index-pc/index-pc.css">
+  <link rel="stylesheet" href="./css/index-mo/index-mo.css"> 
 </head>
 
 <body>
@@ -276,8 +276,8 @@
   </div>
 </div>  
 
-<script src="./js/mo-main.js"></script>
-<script src="./js/main.js"></script>
+<script src="./js/index-mo.js"></script>
+<script src="./js/index-pc.js"></script>
 
 </body>
 </html>
