porpolio-list_page

--- a/index.html
+++ b/index.html
@@ -23,19 +23,18 @@
   </ul>
 
 <div id="wrap">
-
+  
   <header id="header" class="header">
     <div class="header_container">
       <div class="logo" >
         <a href="#" class="logo_btn"><img id="header_logo" class="desktop-img logoup" src="./img/homebutton_logo.png" alt=""></a>
-<!--         <textarea style="margin-top: -20%;" id="wheelNumberPrint"></textarea> -->  <!-- 추후 완성시 삭제 필요 -->
       </div>
       <nav>
         <ul class="header_menu" id="header_menu">
-          <a href="#"><li>About</li></a>
-          <a href="#"><li>Portfolio</li></a>
-          <a href="#"><li>Our</li></a>
-          <a href="#"><li>Contact</li></a>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Our</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
       <!-- 모바일 메뉴바 버튼 -->
@@ -235,7 +234,7 @@
     <!-- 푸터 -->
     <section id="section12" class="section section12">
       <div class="sec12_container container">
-        <div class="backgrond_img"><img src="./img/blur_object3.png" alt=""></div>
+        <div class="background_img"><img src="./img/blur_object3.png" alt=""></div>
         <div class="logo" id="logo">
           <a href="#" class="logo-btn"><img id="logo-img" src="./img/footer_logo.png" alt=""></a>
           <!-- <textarea style="margin-top: -10%;" id="wheelNumberPrint3"></textarea>  -->
@@ -279,5 +278,7 @@
 <script src="./js/index-mo.js"></script>
 <script src="./js/index-pc.js"></script>
 
+<!-- 헤더푸터 -->
+<script src="./components/app.js" type="module"></script>
 </body>
 </html>
