--- a/menu.html
+++ b/menu.html
@@ -8,9 +8,7 @@
   <!-- css -->
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/fonts.css">
-  <link rel="stylesheet" href="./css/menu.css">
-  <!-- <link rel="stylesheet" href="./css/response.css"> -->
-  <!-- <link rel="stylesheet" href="./css/style.css"> -->
+  <link rel="stylesheet" href="./css/menu/menu.css">
 
 </head>
 <body>
